--- a/scss/2-utils/_variables.scss
+++ b/scss/2-utils/_variables.scss
@@ -3,7 +3,8 @@ $max-width: 1200px;
 $color1: #f7aa00;
 $color2-1: #235784;
 $color2-2: #40a8c4;
-$color2-3: #bcdbdf;
+$color2-3: #f1fdff;
+$color3: #692384;
 
 $color-dark-grey: #1f2830;
 $color-light-grey: #e0e4e7;
