--- a/scss/0-main/main.scss
+++ b/scss/0-main/main.scss
@@ -4,4 +4,5 @@
 @import "../3-layout/footer";
 @import "../3-layout/main";
 @import "../4-composants/slider";
-@import "../4-composants/film";
+@import "../4-composants/movie";
+@import "../4-composants/details-movie";
