--- a/scss/0-main/main.scss
+++ b/scss/0-main/main.scss
@@ -6,3 +6,5 @@
 @import "../4-composants/slider";
 @import "../4-composants/movie";
 @import "../4-composants/details-movie";
+@import "../4-composants/human-cards";
+@import "../4-composants/detailsHuman";
