--- a/scss/4-composants/_details-movie.scss
+++ b/scss/4-composants/_details-movie.scss
@@ -38,6 +38,7 @@
         margin-top: 30px;
         padding-right: 30px;
         font-style: oblique;
+        line-height: 1.5;
       }
     }
   }
