--- a/scss/0-main/main.scss
+++ b/scss/0-main/main.scss
@@ -8,3 +8,4 @@
 @import "../4-composants/details-movie";
 @import "../4-composants/human-cards";
 @import "../4-composants/detailsHuman";
+@import "../3-layout/home";
