Ajout erreur 404, .env, maj README et l'autoload.env

--- a/scss/0-main/main.scss
+++ b/scss/0-main/main.scss
@@ -9,3 +9,4 @@
 @import "../4-composants/human-cards";
 @import "../4-composants/detailsHuman";
 @import "../3-layout/home";
+@import "../4-composants/error404";
